--- a/pages/posts/english/grammar/introduction.mdx
+++ b/pages/posts/english/grammar/introduction.mdx
@@ -1,43 +1,99 @@
 import grammarSvg from './assets/grammar.svg'
 
-# 学语法，就要快 —— 告别“玄学”，重建英语底层逻辑
+# 一周掌握“够用”的英语语法
 
-## 1. 为什么英语学习总是“半途而废”？
+学习英语，最大的挑战莫过于“半途而废”。这并非毅力不足，而是人性使然——长时间缺乏正向反馈，任何事情都难以坚持。语言学习恰恰就是这种容易**缺乏正反馈，甚至正反馈为零**的事，这也是多数人英语学习举步维艰的原因。
 
-如果把英语比作一座大厦，那么**词汇**就是砖石，**语法**就是钢筋骨架。
+我们沉迷游戏，乐此不疲，正是因为游戏机制提供了持续的正反馈：每一次技能释放的血量削减，每一关通关的奖励，以及不断累积的经验值，都在源源不断地刺激多巴胺分泌，带来愉悦感。
 
-绝大多数学习者在起步时，都会陷入两个巨大的“泥潭”：
-*   **词汇的汪洋大海：** 单词背了忘，忘了背，永远觉得不够用。
-*   **语法的琐碎规则：** 各种时态、语态、异常用法，像是一团乱麻。
+然而，回到英语学习，我们却常在无尽的单词和语法中迷失。三天、一周，甚至一个月，我们或许能坚持一时，却难以持之以恒。
 
-这两者都有一个共同点：**浩大且琐碎**。当你花费了数月甚至数年时间去啃大部头的语法书，却发现自己依然看不懂长难句、写不出地道的表达时，那种“正反馈”的缺失会迅速消磨掉你的意志。很多人就在这种“看不到头”的挫败感中，选择了放弃。
+因此，英语学习的关键在于，**如何持续获得正向反馈**。
 
-## 2. 爱情应该是“长跑”，而语法不是
+这种反馈来源因人而异：
 
-语法是学不完的。
+* 如果你热爱篮球，可能是听懂YouTube上球星的访谈。
+* 如果你是程序员，可能是无障碍阅读技术文档。
+* 如果你工作中需要英语，可能是摆脱翻译工具的束缚。
 
-其实，支撑起 80% 英语阅读和表达的语法核心，并不是那些偏难怪的特例，而是一套**成体系、有规律、可推导**的逻辑框架。
+简而言之，就是要在你热爱的领域中积极运用英语，这会让你更容易得到正向反馈，才能坚持去不断实践，不断积累。
 
-学语法，不应该追求“面面俱到”，而应该追求“快速建模”。一旦你脑子里有了这张地图，剩下的细节只是在往地图里填色。
+而要开启这种运用，一个“够用”的语法知识体系是基础，它能让你自信地阅读和书写句子。
 
-我们要做的，是用最短的时间，把这套底层逻辑植入大脑，然后去实践。
+本系列就旨在帮助英语学习者快速掌握“够用”的语法知识。我们不求面面俱到，只构建一个英语语法的核心框架，让你足以开始读写，并在实际运用中不断完善细节。
 
-有了这个框架后，基本就能开始看到英文句子，剩下的就是慢慢积累词汇，遇到细致的语法问题再针对的去补充学习。
+之所以选择“够用”，就是为了避免学习战线过长导致中途放弃，而快速掌握一个大致的语法框架，又是既可能又现实的。
 
-## 3. 英语底层逻辑地图
+诚然，语法知识浩瀚如海，但支撑80%英语阅读和表达的核心语法，并非那些偏难怪的特例，而是一套**简洁、成体系、有规律、可推导**的框架，完全可以通过快速学习掌握。
 
-在接下来的系列文章中，我们将拆解这套“极简语法框架”。它由以下几个核心模块构成：
 
-1.  **词性（Parts of Speech）：** 识别单词的属性，这是所有规则的起点。
-2.  **修饰关系（Modification）：** 弄清谁在形容谁，解决“定语”和“状语”的迷思。
-3.  **句子成分（Components）：** 拆解主谓宾定状补，看清句子的骨架。
-4.  **五种基本句型（Basic Patterns）：** 掌握英语句子的五种“标准模具”。
-5.  **从句（Clauses）：** 学习如何把小句子嵌套进大句子。
-6.  **简化从句与非谓语动词（Non-finite Verbs）：** 掌握英语进阶的精髓，让句子变高级。
+有多快呢？我建议花一周，或者更短的时间。
+
+本章将概述语法的基本框架，后续章节再逐一深入。
+
+---
+
+## 语法大致是怎么一回事？
 
 <div style={{margin: '1rem 0'}}>
   <img src={grammarSvg} alt="英语语法逻辑全景图" style={{maxWidth: '100%'}} />
 </div>
 
-## 结语
 
+英语语法的核心在于**动词**。它像骨架一样支撑着句子的结构。
+
+> **I $$like$$ cats.**
+> (我喜欢猫。)
+
+
+在此基础上，用**形容词**来修饰名词，让事物更具体；用**副词**来修饰动词、形容词或其它副词，让动作或状态更生动。
+
+形容词修饰名词：
+> **I like $$cute$$ cats.**
+> (我喜欢可爱的猫。)
+
+副词修饰动词：
+> **I $$really$$ like cute cats.**
+> (我真的很喜欢可爱的猫。)
+
+副词修饰形容词：
+> **I like $$very$$ cute cats.**
+> (我喜欢非常可爱的猫。)
+
+这些元素共同构建了英语的**五种基本句型**，它们是所有复杂句子的基础。
+
+主谓宾：
+
+> **I like cats.**
+> (我喜欢猫。)
+
+主谓：
+> **Cats sleep.**
+> (猫睡觉。)
+
+
+通过**连词**，可以将两个或多个简单句连接起来，形成更复杂的**三大从句**（名词从句、形容词从句、副词从句），表达更丰富的意思。
+
+连词连接两个简单句：
+> **I like cats, $$and$$ they are cute.**
+> (我喜欢猫，它们很可爱。)
+
+形成形容词从句：
+> **I like cats $$that$$ $$play$$ $$with$$ $$toys$$.**
+> (我喜欢玩玩具的猫。)
+
+而这些从句，又常常可以通过**分词**进行简化，使表达更简洁、更高效。
+
+> **I like cats $$playing$$ $$with$$ $$toys$$.**
+> (我喜欢玩玩具的猫。)
+
+英语语法差不多就是这么一回事。只要抓住动词这个核心，理解修饰语的作用，掌握基本句型，再学会如何用连词和分词来拓展和简化句子，你就能搭建起一个清晰、有力的英语表达框架。掌握这些基础，就能让你更自信地阅读和表达。
+
+---
+
+## 结语
+如果想要更详细深入的学习，我推荐
+
+旋元佑进阶文法 https://grammar.codeyu.com/
+
+还有张满胜的《英语语法新思维》
