feat: /grammar/introduction

--- a/pages/posts/english/grammar/introduction.mdx
+++ b/pages/posts/english/grammar/introduction.mdx
@@ -62,14 +62,25 @@ import grammarSvg from './assets/grammar.svg'
 
 这些元素共同构建了英语的**五种基本句型**，它们是所有复杂句子的基础。
 
-主谓宾：
+主谓：
+> **<span className="text-rose font-semibold">Cats</span> <span className="text-emerald-400 font-semibold">sleep</span>.**
+> (猫睡觉。)
 
-> **I like cats.**
+主谓宾：
+> **<span className="text-rose font-semibold">I</span> <span className="text-emerald-400 font-semibold">like</span> <span className="text-sky-400 font-semibold">cats</span>.**
 > (我喜欢猫。)
 
-主谓：
-> **Cats sleep.**
-> (猫睡觉。)
+主谓宾补：
+> **<span className="text-rose font-semibold">I</span> <span className="text-emerald-400 font-semibold">call</span> <span className="text-sky-400 font-semibold">my cat</span> <span className="text-fuchsia-400 font-semibold">Kitty</span>.**
+> (我叫我的猫咪“Kitty”。)
+
+主谓双宾：
+> **<span className="text-rose font-semibold">I</span> <span className="text-emerald-400 font-semibold">give</span> <span className="obj-wrapper"><span className="obj-text text-sky-400 font-semibold">my cat</span><span className="obj-index">1</span></span> <span className="obj-wrapper"><span className="obj-text text-sky-400 font-semibold">food</span><span className="obj-index">2</span></span>.** 
+> (我给我的猫咪食物。)
+
+主谓表：
+> **<span className="text-rose font-semibold">My cat</span> <span className="text-emerald-400 font-semibold">is</span> <span className="text-fuchsia-400 font-semibold">cute</span>.**
+> (我的猫咪很可爱。)
 
 
 通过**连词**，可以将两个或多个简单句连接起来，形成更复杂的**三大从句**（名词从句、形容词从句、副词从句），表达更丰富的意思。
