--- a/pages/posts/english/grammar/introduction.mdx
+++ b/pages/posts/english/grammar/introduction.mdx
@@ -13,8 +13,10 @@ import grammarSvg from './assets/grammar.svg'
 这种反馈来源因人而异：
 
 * 如果你热爱篮球，可能是听懂YouTube上球星的访谈。
+* 如果你喜欢世界名著，可能是畅快的阅读原版文字。
 * 如果你是程序员，可能是无障碍阅读技术文档。
 * 如果你工作中需要英语，可能是摆脱翻译工具的束缚。
+* ......
 
 简而言之，就是要在你热爱的领域中积极运用英语，这会让你更容易得到正向反馈，才能坚持去不断实践，不断积累。
 
