feat: edit introduction

--- a/pages/posts/english/grammar/introduction.mdx
+++ b/pages/posts/english/grammar/introduction.mdx
@@ -91,9 +91,17 @@ import grammarSvg from './assets/grammar.svg'
 > **I like cats, $$and$$ they are cute.**
 > (我喜欢猫，它们很可爱。)
 
+形成名词从句：
+> **I know $$that$$ $$cats$$ $$are$$ $$cute$$.**
+> (我知道猫是可爱的。)
+
 形成形容词从句：
 > **I like cats $$that$$ $$play$$ $$with$$ $$toys$$.**
 > (我喜欢玩玩具的猫。)
+
+形成副词从句：
+> **$$Because$$ $$I$$ $$like$$ $$cats$$, I often watch cat videos.**
+> (因为我喜欢猫，我经常看猫咪视频。)
 
 而这些从句，又常常可以通过**分词**进行简化，使表达更简洁、更高效。
 
