feat: edit introduction

--- a/pages/posts/english/grammar/introduction.mdx
+++ b/pages/posts/english/grammar/introduction.mdx
@@ -62,7 +62,7 @@ import grammarSvg from './assets/grammar.svg'
 > **I like $$very$$ cute cats.**
 > (我喜欢非常可爱的猫。)
 
-这些元素共同构建了英语的**五种基本句型**，它们是所有复杂句子的基础。
+这些元素共同构建英文简单句，把所有非必需的修饰语（形容词，副词、介词短语等）先拿掉，只看动词要求的“必需位置”，就会出现 5 种最常见、最稳定的骨架，这就是常说的**五种基本句型**，它们是所有复杂句子的基础。
 
 主谓：
 > **<span className="text-rose font-semibold">Cats</span> <span className="text-emerald-400 font-semibold">sleep</span>.**
