--- a/pages/posts/english/grammar/introduction.mdx
+++ b/pages/posts/english/grammar/introduction.mdx
@@ -1,4 +1,5 @@
 import grammarSvg from './assets/grammar.svg'
+import Del from '../../../../src/component/Del'
 
 # 花一周掌握“够用”的英语语法
 
@@ -103,10 +104,19 @@ import grammarSvg from './assets/grammar.svg'
 > **$$Because$$ $$I$$ $$like$$ $$cats$$, I often watch cat videos.**
 > (因为我喜欢猫，我经常看猫咪视频。)
 
-而这些从句，又常常可以通过**分词**进行简化，使表达更简洁、更高效。
+而这些从句，又常常可以省略连接词和通过**分词**进行简化，使表达更简洁、更高效。
 
+省略连接词：
+> **I know <Del>$$(that)$$</Del> $$cats$$ $$are$$ $$cute$$.**
+> (我知道猫是可爱的。)
+
+从句简化为分词短语（形容词从句）：
 > **I like cats $$playing$$ $$with$$ $$toys$$.**
 > (我喜欢玩玩具的猫。)
+
+从句简化为分词短语（副词从句）：
+> **$$Liking cats$$, I often watch cat videos.**
+> (因为喜欢猫，我经常看猫咪视频。)
 
 英语语法差不多就是这么一回事。只要抓住动词这个核心，理解修饰语的作用，掌握基本句型，再学会如何用连词和分词来拓展和简化句子，你就能搭建起一个清晰、有力的英语表达框架。掌握这些基础，就能让你更自信地阅读和表达。
 
