--- a/pages/posts/english/grammar/introduction.mdx
+++ b/pages/posts/english/grammar/introduction.mdx
@@ -93,11 +93,11 @@ import Del from '../../../../src/component/Del'
 > (我喜欢猫，它们很可爱。)
 
 形成名词从句：
-> **I know $$that$$ $$cats$$ $$are$$ $$cute$$.**
+> **I know $$\mathbf{that}$$ $$cats$$ $$are$$ $$cute$$.**
 > (我知道猫是可爱的。)
 
 形成形容词从句：
-> **I like cats $$that$$ $$play$$ $$with$$ $$toys$$.**
+> **I like cats $$\mathbf{that}$$ $$play$$ $$with$$ $$toys$$.**
 > (我喜欢玩玩具的猫。)
 
 形成副词从句：
