--- a/pages/posts/english/grammar/element.mdx
+++ b/pages/posts/english/grammar/element.mdx
@@ -1,19 +1,173 @@
 # 成分
 
-英文句子中的核心成分：主语 (subject)、谓语 (predicate)、宾语 (object)。
-核心成分不可或缺，能让你最基本的说一件事情。
-比如：I eat food. (我吃食物。)
+成分（sentence elements / constituents）指的是：一个句子里，不同“位置/功能”的部分，各自承担什么作用。
 
-修饰/补充成分：定语 (attribute)、状语 (adverbial)、补语 (complement)。
-修饰/补充成分可有可无，但能让你把一件事情说的更丰富、更具体。
-比如：I eat delicious food quickly at home. (我在家快速地吃美味的食物。)
+你可以把句子理解成“一个小机器”，词性是“零件是什么材料/类别”，而成分是“零件装在机器的哪里、干什么活”。
 
-主   名词
-谓   动词
-宾   名词
-定   形容词
-状   副词
-补   名词/形容词/特殊副词（时间、地点、介副词）
+---
+
+## 成分都有哪些？
+
+### 1）主语：我们在谈论谁/什么（主角）
+
+我们谈论的主角，就是句子中的**主语（Subject）** 。主语一般是[人、地、事、物]，也就是**名词性质**的东西。
+
+比如我们今天要谈论的：
+
+> **Cats**（猫）
+
+但只说“猫”，意思是不完整的：猫怎么了？猫干了什么事？
+
+---
+
+### 2）谓语：主角发生了什么
+
+因此至少要说明猫处于什么状态，或者猫发生了什么动作。这部分就是句子中的**谓语（Predicate）**，核心由**动词**承担。
+
+如果猫的动作能自己完成，比如：
+
+> **Cats** $$sleep$$.（猫睡觉。）
+
+> **Cats** $$run$$.（猫跑。）
+
+这类动词叫**不及物动词**：动作不需要“承受对象”也能成句。
+
+---
+
+### 3）宾语：动作落在谁/什么身上（承受者）
+
+但如果猫的动作涉及其他的[人、地、事、物]，此时谓语动词是**及物动词**，就需要多一个承受的对象，比如：
+
+>  **Cats eat $$fish$$**.（猫吃鱼。）
+
+>  **Cats catch $$mice$$**.（猫抓老鼠。）
+
+我们不能只说 “Cats eat.” 或 “Cats catch.”  
+不然“吃了什么/抓了什么”会让人费解。
+
+这个动作的承受对象，就是句子中的**宾语（Object）**。宾语也是名词性质。
+
+---
+
+### 4）表语：主角是什么/怎么样（主语补语）
+
+如果我们不说猫作了什么动作，而是想说明猫是什么，或者猫怎么样，猫处于什么样的状态，比如：
+
+>  **My cat is $$cute$$**.（我的猫很可爱。）
+> → **cute**：表语（说明主语怎么样）、
+
+>  **This cat is $$my$$ $$pet$$**.（这只猫是我的宠物。）
+> → **my pet**：表语（说明主语是什么）
+
+>  **My cat looks $$sleepy$$**.（我的猫看起来困了。）
+> → **sleepy**：表语
+
+>  **The kitten became $$quiet$$**.（小猫变安静了。）
+→ **quiet**：表语
+
+此时用来说明主语“是什么/怎么样”的部分，就是**表语（Predicative）**。从功能上看，它也常被称为**主语补语（Subject Complement）**。
+
+而连接主语和表语的这类动词最典型的是**系动词**：最典型是 $$be$$（am/is/are），也包括各种感官动词 $$seem$$ / $$become$$ / $$look$$ / $$feel$$ 等。
+
+---
+
+### 5）补语：承受对象是什么/怎么样（宾语补语）
+
+表语用来补充说明主语（主语补语），当然宾语也存在需要补充说明的情况，用来补充说明宾语的部分是**宾语补语（Object Complement）**。
+
+它的工作是：**补充说明宾语是什么/怎么样/变成什么**，否则句意不完整或表达不到位。
+
+> **I call my cat $$Kitty$$**.（我叫我的猫咪“Kitty”。）
+> **Kitty** 说明宾语 **my cat** → 宾语补语
+
+> **They made him $$captain$$**.（他们让他当队长。）
+> **captain** 说明宾语 **him** → 宾语补语
+
+> **I found the room $$clean$$**.（我发现房间很干净。）
+> **clean** 说明宾语 **the room** → 宾语补语
+
+你可以把它理解成：动词先把动作“做完”（有宾语了），但还想把宾语“定性/定名/定结果”，所以再加一块说明。
+
+---
+
+### 6）同位语：对名词再解释一遍
+
+有时候我们说到一个名词，还想用另一个名词/名词短语把它解释清楚：它是谁？它是什么身份？它和我什么关系？，比如：
+
+> **Kitty, $$my$$ $$cat$$, is sleeping**.（Kitty，我的猫，在睡觉。）
+
+> **Tom, $$my$$ $$friend$$, likes cats**.（Tom，我的朋友，喜欢猫。）
+
+> **Beijing, $$the$$ $$capital$$ $$of$$ $$China$$, is huge.**.（北京，中国的首都，很大。）
+
+这种“并排再解释一遍”的结构，就是同位语（Apposition）。
+
+你可以把它理解成：两个名词指向同一个东西，后一个是在给前一个“翻译/补充说明”。
+
+最像中文的：逗号隔开（补充说明）
+
+#### 同位语和“补语”有什么区别？
+
+容易混的点在这里：同位语不靠动词触发，它是名词内部的“并排解释”；而补语是动词结构里“必须/强相关”的槽位。对比一下：
+
+> **I call my cat Kitty.**.
+> Kitty 是宾语补语（call 这种动词常需要“叫它什么”）
+
+> **Kitty, my cat, is sleeping..**.
+> my cat 是同位语（解释 Kitty 是谁，不是动词要求的）
 
 
+### 7）定语：让“人/地/事/物”更具体（修饰名词）
+
+目前我们谈论了猫怎么怎么样，但如果要说到什么样的猫，或者哪个猫，比如:
+
+>  **I like $$cute$$ cats**.（我喜欢可爱的猫。）
+> → **cute** 修饰 **cats**
+
+>  **The $$black$$ cat is sleeping**.（那只黑猫在睡觉。）
+> → **black** 修饰 **cat**
+
+>  **The cat $$on$$ $$the$$ $$sofa$$ is sleeping**.（沙发上的猫在睡觉。）
+> → **on the sofa** 修饰 **cat**
+
+这个用来修饰名词（主语或宾语）的成分就叫**定语（Attributive）**。最常见是**形容词**，也可以是代词、名词、介词短语等。
+
+定语的核心作用是：**缩小范围，让名词不再模糊**。
+
+---
+
+### 8）状语：让动作/状态更有画面（修饰动词等）
+
+我们说清楚了什么样的猫，也说清楚了猫干了什么样的事，但我们还想更生动的说明猫是怎么干的这个事，更精确的说明是在什么时候做的，如果：
+
+>  **Cats sleep $$soundly$$**.（猫睡得很香。）
+> → 方式状语  
+
+>  **Cats sleep $$on$$ $$the$$ $$sofa$$**.（猫在沙发上睡。）
+> → 地点状语  
+
+>  **Cats sleep $$every$$ $$afternoon$$**.（猫每天下午睡。） 
+> → 时间状语  
+
+>  **I $$really$$ like cats**.（我真的喜欢猫。）
+> → 程度状语（修饰 like）  
+
+>  **$$Because$$ $$I$$ $$like$$ $$cats$$, I often watch cat videos**.（因为我喜欢猫，我经常看猫咪视频。）
+> → 原因状语（从句）
+
+这个修饰动词、形容词、副词或整个句子的成分就叫**状语（Adverbial）**。它告诉我们动作/状态的时间、地点、方式、原因、目的、程度等。
+
+状语的核心作用是：**给动作加“背景信息”，让句子更生动、更精确**。
+
+---
+
+## 主谓宾补状(定)
+
+虽然上面列举了8种成分，但细看，表语和补语都是用作补充说明的成分，区别在意表语主要用于补足主语，我们可以统一看出补语。
+
+而同位语也只是作为对主语的补充说明，一定程度上可以理解为 同位语 = 主语，因此把同位语忽略常常不会对我们理解句子有什么影响，甚至有帮助。
+
+而定语往往只是起到修饰或者限定主语而存在，我们在理解句子时往往只需要统一看成主语部分。
+
+因此关于句子成分我们只需要重点关注主语、谓语、宾语、补语、状语即可。
 
