--- a/pages/posts/english/grammar/element.mdx
+++ b/pages/posts/english/grammar/element.mdx
@@ -163,7 +163,7 @@
 
 ## 主谓宾补状(定)
 
-虽然上面列举了8种成分，但细看，表语和补语都是用作补充说明的成分，区别在意表语主要用于补足主语，我们可以统一看出补语。
+虽然上面列举了8种成分，但细看，表语和补语都是用作补充说明的成分，区别只在意表语主要用于补足主语，我们可以统一看成补语。
 
 而同位语也只是作为对主语的补充说明，一定程度上可以理解为 同位语 = 主语，因此把同位语忽略常常不会对我们理解句子有什么影响，甚至有帮助。
 
