feat: 五大基本句型

--- a/pages/posts/english/grammar/basic-sentence-patterns.mdx
+++ b/pages/posts/english/grammar/basic-sentence-patterns.mdx
@@ -1,99 +1,215 @@
-## 五大基本句型总整理（导读 + 正文合并完整版）
+## 五大基本句型：先抓“句子主干”，再看附加信息
 
-### 导读：英语如何根据动词把句子归纳成 5 个基本句型？
+你一定和不同说话风格的人聊过天：  
+有的人表达很简洁，一句话就把重点说完；有的人喜欢讲得更细，把时间、地点、原因、人物细节全补上。  
 
-英文句子看起来变化很多：有的很短、有的很长；有的后面接时间地点、有的接一整串子句。但是不管句子怎么变，每一个完整的英文句子都一定有**动词**，而且写作时最关键的一步就是：先抓住这个动词，再判断它在这个句子里**需要哪些必需成分**，句子主干才会完整。
+但不管说长说短，**核心信息通常只有一条**，其余多半是“附加信息”。
 
-这里先区分两个观念：
-
-1. **必需成分（complements）**：没有它，句意会不完整，读者会觉得“你还没讲完”。例如：*chase* 通常要交代“追什么”；*consider* 通常要交代“把它当成什么”。  
-2. **修饰语（adjuncts）**：用来补充时间、地点、方式等资讯，可加可不加；拿掉后句子主干仍成立。例如：*this morning / in the yard / very quickly* 之类。
-
-所谓「基本句型」，其实就是把修饰语暂时放一边，只看动词为了把句意说完，后面到底**需要几个必需成分**。这样归纳下来，最常见、最稳定的句子骨架大致就只剩 5 种：
-
-- **不及物动词：S + V**（动词可独力完成）  
-- **及物动词：S + V + O**（动词需要一个受词）  
-- **系动词：S + V + C**（动词连接主词与说明，需补语）  
-- **双宾动词：S + V + O1 + O2**（动词需要两个受词：给谁、给什么）  
-- **宾语补语：S + V + O + C**（动词需要“受词 + 对受词的说明”）
-
-理解这 5 个基本句型的意义在于：写作时你只要先锁定动词，就能快速判断句子的主干该长什么样，避免把“该有的受词/补语”漏掉，也避免把“只是修饰语的东西”误当成主干的一部分。接下来就依序用例句来说明这五种句型的结构与元素。
+英语句子也是同理：看起来千变万化，但只要先抓住**句子主干**（主语 + 谓语 + 必要成分），就能快速理解大意；再回头处理状语、定语、从句等补充内容，会轻松很多。
 
 ---
 
-# 一. S + V
+## 从一句话到长句：主干永远最重要
 
-### The dog barked. S V（狗叫了。）
+先看这个主干：
 
-这个句子的主语是主词 **the dog** 这个名词片语、由它担任主角。所谓名词，指的是「人、地、事、物」的名称。由这个定义来看，一个句子的主词必须是名词类，包括名词片语、代名词、名词子句等等。
+> **I found the cat.**  
+>（我找到了那只猫。）
 
-本句的述部以动词 **barked** 为主，告诉读者说这只狗「叫」。像 **bark** 这种动词称为**不及物动词**，可以独力完成而不需要受词来接受这个动作。因此 **The dog barked.** 本身就是一个完整句子。
+我们可以把它扩写成很长的句子：
 
-> 你当然也可以加上时间、地点、方式等修饰语把画面补得更清楚，但那些多半是“可有可无”的附加资讯；主干仍是 **S + V**。
+> **I found my lost cat that was hiding behind the bushes by following its meows in the backyard this morning, and I brought it back inside.**  
+>（我今天早上在后院顺着叫声找到了我走丢的猫，它躲在灌木后面，然后我把它抱回屋了。）
 
----
+这句话看起来信息很多，但**最核心的主干**仍是：
 
-# 二. S + V + O
+- **主语**：I  
+- **谓语动词**：found  
+- **宾语**：the cat  
 
-### The dog chased the ball. S V O（狗追球。）
+也就是：**I found the cat.**
 
-这个例子中，**chase**（追逐）这种动作和 bark 很不一样：要表达「追」这个动作，通常得交代一个对象——追**什么**。这种用法下的动词称为**及物动词**，后面必须有受词来「接受」这个动作。
+其余信息都是为了“补画面”，常见的补法包括：
 
-上例中 **chased** 就是及物动词，而被追的 **the ball**（球）就是它的受词。顺便提一下：和主词的情况相同，受词也必须是「人、地、事、物」，所以受词的词类也必须是名词类（包括代名词、名词片语、名词子句等等）。
+### 1）加时间状语：什么时候找到
+> <span className="text-rose font-semibold">I</span> <span className="text-emerald-400 font-semibold">found</span> <span className="text-sky-400 font-semibold">the cat</span> <span className="text-fuchsia-400 font-semibold">this morning</span>.  
+（我今天早上找到了那只猫。）
 
-这里有一点必须先说明一下：同一个动词，视用法的不同，经常是有可能当及物动词使用、也有可能当不及物动词使用。写作时要特别注意：如果动词在这个用法下需要受词，你就不能把它省略；除非语境非常清楚，否则读者会觉得句意不完整。
+### 2）加地点状语：在哪找到
+> <span className="text-rose font-semibold">I</span> <span className="text-emerald-400 font-semibold">found</span> <span className="text-sky-400 font-semibold">the cat</span> <span className="text-fuchsia-400 font-semibold">in the backyard</span>.  
+（我在后院找到了那只猫。）
 
----
+### 3）加方式状语：怎么找到
+> <span className="text-rose font-semibold">I</span> <span className="text-emerald-400 font-semibold">found</span> <span className="text-sky-400 font-semibold">the cat</span> <span className="text-fuchsia-400 font-semibold">by following its meows</span>.  
+（我顺着它的叫声找到了那只猫。）
 
-# 三. S + V + C（主系表）
+### 4）加定语：是哪只猫
+> <span className="text-rose font-semibold">I</span> <span className="text-emerald-400 font-semibold">found</span> <span className="text-amber-400 font-semibold">my lost</span> <span className="text-sky-400 font-semibold">cat</span>.  
+（我找到了我走丢的猫。）
 
-### The dog is playful. S V C（狗很顽皮。）
+### 5）加定语从句：进一步限定“是哪只”
+> <span className="text-rose font-semibold">I</span> <span className="text-emerald-400 font-semibold">found</span> <span className="text-amber-400 font-semibold">my lost</span> <span className="text-sky-400 font-semibold">cat</span> <span className="text-amber-400 font-semibold">that was hiding behind the bushes</span>.  
+（我找到了我走丢的猫，它躲在灌木后面。）
 
-这个句子的主语仍然是 **the dog**，由它担任主角。
+### 6）加并列分句：补充后续动作/结果
+> …, <span className="text-fuchsia-400 font-semibold">and I brought it back inside.</span>  
+（……然后我把它抱回屋了。）
 
-述部最重要的是 **is**。在这里 **be 动词（am/is/are/was/were）**并不是在表达“做某个动作”，而是用来**连接主词与后面的说明**，所以它属于**系动词**。
-
-后面的 **playful** 是**补语（C）**，更具体说是**主词补语/表语**：它用来说明主词 **the dog**「是什么样子/处于什么状态」。因此这句的骨架不是“狗做了什么”，而是“狗是怎样的”。
-
----
-
-# 四. S + V + O1 + O2（双宾语）
-
-### The boy gave the dog a ball. S V O1 O2（男孩给狗一个球。）
-
-这个句子的主语是 **the boy**（名词片语），述部动词是 **gave**。像 **give** 这种动词，语意上常牵涉到两件事：  
-1) 给**谁**（接受者）  
-2) 给**什么**（物品）
-
-因此后面会出现两个受词：
-
-- **the dog** 是 **O1（间接受词）**：表示接受者（给谁）。  
-- **a ball** 是 **O2（直接受词）**：表示被给予的东西（给什么）。
-
-这个句型还有一个很好用的检验方式：可以改写成介系词结构，意思大致不变：  
-**The boy gave a ball to the dog.**（男孩把球给了狗。）  
-这里的 *to the dog* 就对应原句的间接受词 **the dog**。
+你会发现：句子再长，**先抓主干就能先吃到“主信息”**；修饰成分可以晚一点再处理。
 
 ---
 
-# 五. S + V + O + C（宾语补语）
+## 为什么是“五大基本句型”？
 
-### The boy considers the dog a good friend. S V O C（男孩认为狗是个好朋友。）
+五大基本句型之所以分成五种，核心原因在于：**不同动词把意思说完整时，需要的“必要成分”不同**。  
+也就是按谓语动词的**配价/支配结构**来分：动词后面**必须带几个成分**（宾语？补语？两个宾语？）句子才算“讲完”。
 
-这个句子的主语是 **the boy**，动词是 **considers**（认为/视为）。像 **consider** 这种动词常见的用法是：
-
-- **consider + 受词 + 补语**  
-用来表达“把某人/某物视为……”。
-
-上例中：
-
-- **the dog** 是受词（O）：被“视为”的对象。  
-- **a good friend** 是补语（C），更精确说是**宾语补语**：用来补充说明受词 *the dog* 被视为什么身份（一个好朋友）。
-
-这句的关键在于：**宾语补语不是可有可无的修饰语**。如果只写成 *The boy considers the dog.* 读者会立刻觉得意思没讲完：他“认为这只狗怎样/是什么”？所以必须用 **a good friend** 把句意补足。
+<table>
+	<thead>
+		<tr>
+			<th>基本句型</th>
+			<th>关键点（按动词需要的成分）</th>
+			<th>常见动词</th>
+			<th>例句</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td><strong>SV</strong> 主谓</td>
+			<td><strong>不及物动词</strong>：后面不需要宾语</td>
+			<td>来、走、睡、哭、笑</td>
+			<td>他来了。</td>
+		</tr>
+		<tr>
+			<td><strong>SVO</strong> 主谓宾</td>
+			<td><strong>及物动词</strong>：后面需要一个宾语</td>
+			<td>吃、看、喜欢、写、买</td>
+			<td>我看电影。</td>
+		</tr>
+		<tr>
+			<td><strong>SVC</strong> 主系表</td>
+			<td><strong>系动词</strong>：后面必须跟表语（主语补语）</td>
+			<td>是、成为、变得、显得、像、看起来</td>
+			<td>她很开心。/ 他是老师。</td>
+		</tr>
+		<tr>
+			<td><strong>SVOO</strong> 主谓双宾</td>
+			<td><strong>双宾动词</strong>：后面常跟“人 + 物”两个宾语</td>
+			<td>给、送、告诉、教、借</td>
+			<td>我给他一本书。</td>
+		</tr>
+		<tr>
+			<td><strong>SVOC</strong> 主谓宾补</td>
+			<td><strong>宾语 + 宾语补语</strong>缺一不可</td>
+			<td>让、使、叫、认为、选、任命、称为</td>
+			<td>我让他走。/ 我认为他可靠。</td>
+		</tr>
+	</tbody>
+</table>
 
 ---
 
-## 结语：写作时你真正要练的是什么？
+## 五大基本句型逐个看（含判断要点）
 
-写作的时候，每个英文句子都有动词、也都需要判断这个动词在该用法下是及物还是不及物、后面该不该有受词、需不需要补语。研究文法，可以让我们知道总共有哪几种句型、每种句型当中有哪几种元素；但是文法通常不能直接告诉我们某一个动词在某个语境下到底该不该带受词、该不该带补语。要解决这个问题：必须透过广读，大量阅读英文句子、大量接触真实用法，逐渐对一些常用动词的用法会有一些把握，知道它是及物还是不及物、后面该不该有受词，写作时才不容易用错句型。
+### 1）SV（主谓）
+
+**The cat meowed.** $$S\ V$$（猫叫了。）
+
+- **主语**：the cat（名词短语）
+- **谓语动词**：meowed（不及物动词）
+- 这种动词**不需要宾语**，句子已经完整。它表达的是主语自身发出的动作或状态。
+
+你当然也可以加时间、地点、方式等状语把画面补清楚，但主干仍是 $$S+V$$。
+
+**判断要点：**
+1.  **动词本身意义完整：** 动词自身就能表达一个完整的动作或状态，不需要承受者。
+2.  **不能接宾语：** 尝试在动词后直接加“谁”或“什么”，如果语义不通，则很可能是不及物动词。
+    *   例如：“The cat meowed what?” (猫叫了什么？) 听起来很奇怪。
+3.  **常与介词短语连用：** 如果需要补充信息，通常会通过介词短语（如 `in the garden`, `at night`）来补充状语，而非直接接宾语。
+
+---
+
+### 2）SVO（主谓宾）
+
+**The cat chased the toy.** $$S\ V\ O$$（猫追玩具。）
+
+- **chase（追）**通常必须交代“追什么”，所以是**及物动词**
+- **the toy** 是**宾语**（名词短语），是动作的承受者。
+
+同一个动词在不同语境里，可能既能及物也能不及物；写作时要注意：**这个用法下如果需要宾语，就不能省**，否则读者会觉得“话没说完”。
+
+**判断要点：**
+1.  **动词意义不完整：** 动词本身不足以表达一个完整的动作，需要一个承受者来完成意义。
+2.  **能接宾语：** 动词后直接加“谁”或“什么”，语义通顺，且这个“谁/什么”是动作的直接承受者。
+    *   例如：“The cat chased what?” (猫追了什么？) 回答“the toy”很自然。
+3.  **宾语是名词性成分：** 宾语不一定只能是名词/代词，也可以是**名词性结构**：不定式、动名词、名词性从句等。
+    *   例：I enjoy **swimming**. (动名词作宾语)
+    *   例：I know **that he is honest**. (名词性从句作宾语)
+
+---
+
+### 3）SVC（主系表）
+
+**The cat is sleepy.** $$S\ V\ C$$（猫很困。）
+
+- **is** 在这里不是“做动作”，而是连接主语与后面的说明，所以属于**系动词**。常见的系动词包括 `be` (am, is, are, was, were), `become`, `feel`, `look`, `seem`, `sound`, `smell`, `taste`, `grow`, `turn` 等。
+- **sleepy** 是**表语**（也可称“主语补语”），它说明主语“是什么”或“怎么样”。表语可以是名词、形容词、副词、介词短语、不定式、动名词或从句。
+
+这类句子的骨架不是“主语做了什么”，而是“主语是什么/怎么样”，它描述的是主语的**性质、身份、状态或特征**。
+
+**判断要点：**
+1.  **动词不表示动作：** 谓语动词通常是系动词，不表达主语发出的具体动作。
+2.  **表语修饰主语：** 表语是对主语的补充说明，两者之间存在“等于”或“是”的关系。
+    *   例如：The cat = sleepy (猫是困的)。
+3.  **表语成分多样：** 表语可以是形容词（`sleepy`）、名词（`He is a teacher.`）、介词短语（`She is in good health.`）等。
+
+---
+
+### 4）SVOO（主谓双宾）
+
+**The girl gave the cat some food.** $$S\ V\ O1\ O2$$（女孩给猫一些食物。）
+
+- **O1（间接宾语）**：the cat（指代动作的受益者或对象，通常是“人”或“有生命的事物”）
+- **O2（直接宾语）**：some food（指代动作的直接承受者，通常是“物”）
+
+这类句型中的动词通常表示“给予”、“提供”、“传达”等含义，如 `give`, `send`, `tell`, `show`, `buy`, `make`, `lend`, `offer`, `teach` 等。
+
+**常见检验：** 可改写为介词结构，意思基本不变：
+
+**The girl gave some food to the cat.**
+这里的 **to the cat** 对应原句的间接宾语。
+*   如果间接宾语前用 `to`，通常是表示“方向”或“给予”的动词（如 `give`, `send`, `tell`, `show`）。
+*   如果间接宾语前用 `for`，通常是表示“为...做某事”的动词（如 `buy`, `make`, `find`, `get`）。
+    *   例：`She bought me a gift.` → `She bought a gift for me.`
+
+**判断要点：**
+1.  **动词表示“给予”或“提供”：** 动词通常具有传递、给予、提供等含义。
+2.  **两个宾语：** 动词后跟随两个宾语，一个通常指人（间接宾语），一个指物（直接宾语）。
+3.  **可转换性：** 多数SVOO句型可以转换为SVO + 介词短语的形式，且意义保持一致。
+
+---
+
+### 5）SVOC（主谓宾补）
+
+**The girl considers the cat a good pet.** $$S\ V\ O\ C$$（女孩认为这只猫是只好宠物。）
+
+- **the cat** 是宾语（被“认为/视为”的对象）
+- **a good pet** 是**宾语补语**：补充说明宾语“是什么身份/处于什么状态”，它和宾语之间也存在“等于”或“是”的关系。
+
+这类句型中的动词通常表示“使役”、“称谓”、“认为”、“发现”等，如 `make`, `keep`, `call`, `name`, `elect`, `consider`, `think`, `find`, `believe` 等。
+
+关键点：**宾语补语不是可有可无的修饰语**。
+如果只写 **The girl considers the cat.** 读者会立刻觉得：她认为这只猫**怎样/是什么**？因此必须用补语把意思补全。
+
+**判断要点：**
+1.  **宾语后接补充成分：** 动词后紧跟宾语，宾语后再接一个成分。
+2.  **宾语补语修饰宾语：** 宾语补语是对宾语的补充说明，两者之间存在“等于”或“是”的关系。
+    *   例如：the cat = a good pet (这只猫是只好宠物)。
+3.  **语义完整性：** 如果省略宾语补语，句子的意思会变得不完整或不明确。
+4.  **宾语补语成分多样：** 宾语补语可以是名词、形容词、不定式、分词、介词短语等。
+    *   例：`They made him **captain**.` (名词作宾补)
+    *   例：`I found the book **interesting**.` (形容词作宾补)
+    *   例：`We saw him **play basketball**.` (不定式作宾补，`to` 可省略)
+    *   例：`I heard her **singing** in the room.` (现在分词作宾补)
+
+---
